// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Callout > should have a bold gray variant 1`] = `
<div
  class="bg-gray-100 text-gray-900 dark:bg-gray-700 dark:text-white p-4 rounded-lg sds-theme-plaid:rounded-none"
>
  <div
    class="flex items-top space-x-2"
  >
    <!-- Icon -->
    <!--v-if-->
    <!-- Title and content -->
    <div
      class="flex flex-col"
    >
      <span
        class="text-md leading-5.5 font-semibold pb-1"
      >
        This is a title
      </span>
      <div
        class="opacity-90 text-md leading-6 pb-2"
      >
        <div
          class="[&_a:not([class*='no-underline'])]:underline"
        >
          
          This is a description
          
        </div>
      </div>
      <span
        class="text-xs leading-4 opacity-90 italic"
      >
        Dec 04, 2012 at 03:20 am
      </span>
      <!-- Buttons -->
      <!--v-if-->
      <div />
    </div>
    <!-- Close icon -->
    <!--v-if-->
  </div>
</div>
`;

exports[`Callout > should have a bold orange variant 1`] = `
<div
  class="bg-orange-200 text-black dark:bg-orange-200 dark:text-black p-4 rounded-lg sds-theme-plaid:rounded-none"
>
  <div
    class="flex items-top space-x-2"
  >
    <!-- Icon -->
    <!--v-if-->
    <!-- Title and content -->
    <div
      class="flex flex-col"
    >
      <span
        class="text-md leading-5.5 font-semibold pb-1"
      >
        This is a title
      </span>
      <div
        class="opacity-90 text-md leading-6 pb-2"
      >
        <div
          class="[&_a:not([class*='no-underline'])]:underline"
        >
          
          This is a description
          
        </div>
      </div>
      <span
        class="text-xs leading-4 opacity-90 italic"
      >
        Dec 04, 2012 at 03:20 am
      </span>
      <!-- Buttons -->
      <!--v-if-->
      <div />
    </div>
    <!-- Close icon -->
    <!--v-if-->
  </div>
</div>
`;

exports[`Callout > should have a bold red variant 1`] = `
<div
  class="bg-red-600 text-white dark:bg-red-500 dark:text-black p-4 rounded-lg sds-theme-plaid:rounded-none"
>
  <div
    class="flex items-top space-x-2"
  >
    <!-- Icon -->
    <!--v-if-->
    <!-- Title and content -->
    <div
      class="flex flex-col"
    >
      <span
        class="text-md leading-5.5 font-semibold pb-1"
      >
        This is a title
      </span>
      <div
        class="opacity-90 text-md leading-6 pb-2"
      >
        <div
          class="[&_a:not([class*='no-underline'])]:underline"
        >
          
          This is a description
          
        </div>
      </div>
      <span
        class="text-xs leading-4 opacity-90 italic"
      >
        Dec 04, 2012 at 03:20 am
      </span>
      <!-- Buttons -->
      <!--v-if-->
      <div />
    </div>
    <!-- Close icon -->
    <!--v-if-->
  </div>
</div>
`;

exports[`Callout > should have a subtle green variant 1`] = `
<div
  class="border border-green-600 bg-green-25/60 text-green-600 dark:border-green-300 dark:bg-green-900 dark:text-green-300 p-4 rounded-lg sds-theme-plaid:rounded-none"
>
  <div
    class="flex items-top space-x-2"
  >
    <!-- Icon -->
    <!--v-if-->
    <!-- Title and content -->
    <div
      class="flex flex-col"
    >
      <span
        class="text-md leading-5.5 font-semibold pb-1"
      >
        This is a title
      </span>
      <div
        class="opacity-90 text-md leading-6 pb-2"
      >
        <div
          class="[&_a:not([class*='no-underline'])]:underline"
        >
          
          This is a description
          
        </div>
      </div>
      <span
        class="text-xs leading-4 opacity-90 italic"
      >
        Dec 04, 2012 at 03:20 am
      </span>
      <!-- Buttons -->
      <!--v-if-->
      <div />
    </div>
    <!-- Close icon -->
    <!--v-if-->
  </div>
</div>
`;

exports[`Callout > should have a subtle teal variant 1`] = `
<div
  class="border border-teal-600 bg-teal-25/60 text-teal-600 dark:border-teal-300 dark:bg-teal-900 dark:text-teal-300 p-4 rounded-lg sds-theme-plaid:rounded-none"
>
  <div
    class="flex items-top space-x-2"
  >
    <!-- Icon -->
    <!--v-if-->
    <!-- Title and content -->
    <div
      class="flex flex-col"
    >
      <span
        class="text-md leading-5.5 font-semibold pb-1"
      >
        This is a title
      </span>
      <div
        class="opacity-90 text-md leading-6 pb-2"
      >
        <div
          class="[&_a:not([class*='no-underline'])]:underline"
        >
          
          This is a description
          
        </div>
      </div>
      <span
        class="text-xs leading-4 opacity-90 italic"
      >
        Dec 04, 2012 at 03:20 am
      </span>
      <!-- Buttons -->
      <!--v-if-->
      <div />
    </div>
    <!-- Close icon -->
    <!--v-if-->
  </div>
</div>
`;

exports[`Callout > should have a title, description, timestamp, and be size md 1`] = `
<div
  class="border border-gray-900 bg-gray-25 text-gray-900 dark:border-gray-300 dark:bg-gray-900 dark:text-gray-300 p-4 rounded-lg sds-theme-plaid:rounded-none"
>
  <div
    class="flex items-top space-x-2"
  >
    <!-- Icon -->
    <!--v-if-->
    <!-- Title and content -->
    <div
      class="flex flex-col"
    >
      <span
        class="text-md leading-5.5 font-semibold pb-1"
      >
        This is a title
      </span>
      <div
        class="opacity-90 text-md leading-6 pb-2"
      >
        <div
          class="[&_a:not([class*='no-underline'])]:underline"
        >
          
          This is a description
          
        </div>
      </div>
      <span
        class="text-xs leading-4 opacity-90 italic"
      >
        Dec 04, 2012 at 03:20 am
      </span>
      <!-- Buttons -->
      <!--v-if-->
      <div />
    </div>
    <!-- Close icon -->
    <!--v-if-->
  </div>
</div>
`;

exports[`Callout > should have a title, description, timestamp, and be size sm 1`] = `
<div
  class="border border-gray-900 bg-gray-25 text-gray-900 dark:border-gray-300 dark:bg-gray-900 dark:text-gray-300 p-3 rounded-lg sds-theme-plaid:rounded-none"
>
  <div
    class="flex items-top space-x-2"
  >
    <!-- Icon -->
    <!--v-if-->
    <!-- Title and content -->
    <div
      class="flex flex-col"
    >
      <span
        class="text-sm leading-5 font-semibold pb-1"
      >
        This is a title
      </span>
      <div
        class="opacity-90 text-sm leading-5 pb-2"
      >
        <div
          class="[&_a:not([class*='no-underline'])]:underline"
        >
          
          This is a description
          
        </div>
      </div>
      <span
        class="text-xs leading-4 opacity-90 italic"
      >
        Dec 04, 2012 at 03:20 am
      </span>
      <!-- Buttons -->
      <!--v-if-->
      <div />
    </div>
    <!-- Close icon -->
    <!--v-if-->
  </div>
</div>
`;

exports[`Callout > should have an outline blue variant 1`] = `
<div
  class="bg-white border border-blue-600 text-blue-600 dark:bg-black dark:border-blue-300 dark:text-blue-300 p-4 rounded-lg sds-theme-plaid:rounded-none"
>
  <div
    class="flex items-top space-x-2"
  >
    <!-- Icon -->
    <!--v-if-->
    <!-- Title and content -->
    <div
      class="flex flex-col"
    >
      <span
        class="text-md leading-5.5 font-semibold pb-1"
      >
        This is a title
      </span>
      <div
        class="opacity-90 text-md leading-6 pb-2"
      >
        <div
          class="[&_a:not([class*='no-underline'])]:underline"
        >
          
          This is a description
          
        </div>
      </div>
      <span
        class="text-xs leading-4 opacity-90 italic"
      >
        Dec 04, 2012 at 03:20 am
      </span>
      <!-- Buttons -->
      <!--v-if-->
      <div />
    </div>
    <!-- Close icon -->
    <!--v-if-->
  </div>
</div>
`;

exports[`Callout > should have an outline indigo variant 1`] = `
<div
  class="bg-white border border-indigo-600 text-indigo-600 dark:bg-black dark:border-indigo-300 dark:text-indigo-300 p-4 rounded-lg sds-theme-plaid:rounded-none"
>
  <div
    class="flex items-top space-x-2"
  >
    <!-- Icon -->
    <!--v-if-->
    <!-- Title and content -->
    <div
      class="flex flex-col"
    >
      <span
        class="text-md leading-5.5 font-semibold pb-1"
      >
        This is a title
      </span>
      <div
        class="opacity-90 text-md leading-6 pb-2"
      >
        <div
          class="[&_a:not([class*='no-underline'])]:underline"
        >
          
          This is a description
          
        </div>
      </div>
      <span
        class="text-xs leading-4 opacity-90 italic"
      >
        Dec 04, 2012 at 03:20 am
      </span>
      <!-- Buttons -->
      <!--v-if-->
      <div />
    </div>
    <!-- Close icon -->
    <!--v-if-->
  </div>
</div>
`;

exports[`Callout > should have an outline purple variant 1`] = `
<div
  class="bg-white border border-purple-600 text-purple-600 dark:bg-black dark:border-purple-300 dark:text-purple-300 p-4 rounded-lg sds-theme-plaid:rounded-none"
>
  <div
    class="flex items-top space-x-2"
  >
    <!-- Icon -->
    <!--v-if-->
    <!-- Title and content -->
    <div
      class="flex flex-col"
    >
      <span
        class="text-md leading-5.5 font-semibold pb-1"
      >
        This is a title
      </span>
      <div
        class="opacity-90 text-md leading-6 pb-2"
      >
        <div
          class="[&_a:not([class*='no-underline'])]:underline"
        >
          
          This is a description
          
        </div>
      </div>
      <span
        class="text-xs leading-4 opacity-90 italic"
      >
        Dec 04, 2012 at 03:20 am
      </span>
      <!-- Buttons -->
      <!--v-if-->
      <div />
    </div>
    <!-- Close icon -->
    <!--v-if-->
  </div>
</div>
`;

exports[`Callout > should have button in button slot 1`] = `
<div
  class="border border-gray-900 bg-gray-25 text-gray-900 dark:border-gray-300 dark:bg-gray-900 dark:text-gray-300 p-4 rounded-lg sds-theme-plaid:rounded-none"
>
  <div
    class="flex items-top space-x-2"
  >
    <!-- Icon -->
    <!--v-if-->
    <!-- Title and content -->
    <div
      class="flex flex-col"
    >
      <span
        class="text-md leading-5.5 font-semibold pb-1"
      >
        This is a title
      </span>
      <div
        class="opacity-90 text-md leading-6 pb-2"
      >
        <div
          class="[&_a:not([class*='no-underline'])]:underline"
        >
          
          This is a description
          
        </div>
      </div>
      <span
        class="text-xs leading-4 opacity-90 italic"
      >
        Dec 04, 2012 at 03:20 am
      </span>
      <!-- Buttons -->
      <div
        class="justify-center space-x-2 pt-4"
      >
        
        <button>
          This is a button
        </button>
        
      </div>
      <div />
    </div>
    <!-- Close icon -->
    <!--v-if-->
  </div>
</div>
`;

exports[`Callout > should have dismissable icon 1`] = `
<div
  class="border border-gray-900 bg-gray-25 text-gray-900 dark:border-gray-300 dark:bg-gray-900 dark:text-gray-300 p-4 rounded-lg sds-theme-plaid:rounded-none"
>
  <div
    class="flex items-top space-x-2"
  >
    <!-- Icon -->
    <!--v-if-->
    <!-- Title and content -->
    <div
      class="flex flex-col"
    >
      <span
        class="text-md leading-5.5 font-semibold pb-1"
      >
        This is a title
      </span>
      <div
        class="opacity-90 text-md leading-6 pb-2"
      >
        <div
          class="[&_a:not([class*='no-underline'])]:underline"
        >
          
          This is a description
          
        </div>
      </div>
      <span
        class="text-xs leading-4 opacity-90 italic"
      >
        Dec 04, 2012 at 03:20 am
      </span>
      <!-- Buttons -->
      <!--v-if-->
      <div />
    </div>
    <!-- Close icon -->
    <div
      class="ml-auto -mt-1.5"
    >
      <button>
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-xmark fill-gray-900 dark:fill-gray-300 w-5 h-6"
          data-icon="xmark"
          data-prefix="fas"
          role="img"
          viewBox="0 0 384 512"
        >
          <path
            class=""
            d="M55.1 73.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L147.2 256 9.9 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192.5 301.3 329.9 438.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.8 256 375.1 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192.5 210.7 55.1 73.4z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Callout > should have icon in leftSlot 1`] = `
<div
  class="border border-gray-900 bg-gray-25 text-gray-900 dark:border-gray-300 dark:bg-gray-900 dark:text-gray-300 p-4 rounded-lg sds-theme-plaid:rounded-none"
>
  <div
    class="flex items-top space-x-2"
  >
    <!-- Icon -->
    <div>
      
      Left Icon Here
      
    </div>
    <!-- Title and content -->
    <div
      class="flex flex-col"
    >
      <span
        class="text-md leading-5.5 font-semibold pb-1"
      >
        This is a title
      </span>
      <div
        class="opacity-90 text-md leading-6 pb-2"
      >
        <div
          class="[&_a:not([class*='no-underline'])]:underline"
        >
          
          This is a description
          
        </div>
      </div>
      <span
        class="text-xs leading-4 opacity-90 italic"
      >
        Dec 04, 2012 at 03:20 am
      </span>
      <!-- Buttons -->
      <!--v-if-->
      <div />
    </div>
    <!-- Close icon -->
    <!--v-if-->
  </div>
</div>
`;

exports[`Callout > should have inset 1`] = `
<div
  class="border border-gray-900 bg-gray-25 text-gray-900 dark:border-gray-300 dark:bg-gray-900 dark:text-gray-300 p-4 rounded-none"
>
  <div
    class="flex items-top space-x-2"
  >
    <!-- Icon -->
    <!--v-if-->
    <!-- Title and content -->
    <div
      class="flex flex-col"
    >
      <span
        class="text-md leading-5.5 font-semibold pb-1"
      >
        This is a title
      </span>
      <div
        class="opacity-90 text-md leading-6 pb-2"
      >
        <div
          class="[&_a:not([class*='no-underline'])]:underline"
        >
          
          This is a description
          
        </div>
      </div>
      <span
        class="text-xs leading-4 opacity-90 italic"
      >
        Dec 04, 2012 at 03:20 am
      </span>
      <!-- Buttons -->
      <!--v-if-->
      <div />
    </div>
    <!-- Close icon -->
    <div
      class="ml-auto -mt-1.5"
    >
      <button>
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-xmark fill-gray-900 dark:fill-gray-300 w-5 h-6"
          data-icon="xmark"
          data-prefix="fas"
          role="img"
          viewBox="0 0 384 512"
        >
          <path
            class=""
            d="M55.1 73.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L147.2 256 9.9 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192.5 301.3 329.9 438.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.8 256 375.1 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192.5 210.7 55.1 73.4z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Callout > should match its default snapshot 1`] = `
<div
  class="border border-gray-900 bg-gray-25 text-gray-900 dark:border-gray-300 dark:bg-gray-900 dark:text-gray-300 rounded-lg sds-theme-plaid:rounded-none"
>
  <div
    class="flex items-top space-x-2"
  >
    <!-- Icon -->
    <!--v-if-->
    <!-- Title and content -->
    <div
      class="flex flex-col"
    >
      <!--v-if-->
      <div
        class="opacity-90"
      >
        <div
          class="[&_a:not([class*='no-underline'])]:underline"
        >
          
          
          
        </div>
      </div>
      <!--v-if-->
      <!-- Buttons -->
      <!--v-if-->
      <div />
    </div>
    <!-- Close icon -->
    <!--v-if-->
  </div>
</div>
`;

exports[`Callout > should override description with slot 1`] = `
<div
  class="border border-gray-900 bg-gray-25 text-gray-900 dark:border-gray-300 dark:bg-gray-900 dark:text-gray-300 p-4 rounded-lg sds-theme-plaid:rounded-none"
>
  <div
    class="flex items-top space-x-2"
  >
    <!-- Icon -->
    <!--v-if-->
    <!-- Title and content -->
    <div
      class="flex flex-col"
    >
      <span
        class="text-md leading-5.5 font-semibold pb-1"
      >
        This is a title
      </span>
      <div
        class="opacity-90 text-md leading-6 pb-2"
      >
        <div
          class="[&_a:not([class*='no-underline'])]:underline"
        >
          
          This is an overridden description
          
        </div>
      </div>
      <span
        class="text-xs leading-4 opacity-90 italic"
      >
        Dec 04, 2012 at 03:20 am
      </span>
      <!-- Buttons -->
      <!--v-if-->
      <div />
    </div>
    <!-- Close icon -->
    <!--v-if-->
  </div>
</div>
`;
